Proper and correct setup for most of the frontend

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-
     <%= vite_client_tag %>
     <%= vite_javascript_tag 'application.js' %>
+    <%= vite_stylesheet_tag 'application.scss' %>
   </head>
 
   <body>
