Add and configure Devise, create Login and Sign Up forms

--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -14,6 +14,10 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;6
   color-scheme: light;
 }
 
+html, body, #app {
+  height: 100%;
+}
+
 // Navbar
 
 .navbar {
