--- a/app/javascript/stylesheets/_variables.scss
+++ b/app/javascript/stylesheets/_variables.scss
@@ -55,7 +55,7 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $mintgreen-100;
+$light:         $indigo-100;
 $dark:          $mintgreen-900;
 
 $min-contrast-ratio:   2.3 !default;
