Set flash and error messages on login and signup forms

--- a/app/javascript/stylesheets/_variables.scss
+++ b/app/javascript/stylesheets/_variables.scss
@@ -55,7 +55,7 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $indigo-100;
+$light:         $mintgreen-100;
 $dark:          $mintgreen-900;
 
 $min-contrast-ratio:   2.3 !default;
@@ -90,7 +90,7 @@ $table-border-color:          rgba(0, 0, 0, .05) !default;
 
 // Buttons + Forms
 
-$input-btn-border-width:      0 !default;
+//$input-btn-border-width:      0 !default;
 
 // Buttons
 
