Add background flair

--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -185,3 +185,8 @@ th {
     color: inherit;
   }
 }
+
+.background-curved-lines {
+  background-size: cover;
+  background-image: url('../images/background_curves.svg');
+}
