Create form for updating profile info

--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -193,3 +193,7 @@ th {
   background-repeat: no-repeat;
   background-image: url('../images/background_curves.svg');
 }
+
+.icon-secondary {
+  color: $indigo-700;
+}
