--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -205,3 +205,7 @@ th {
 .rounded-pill-end {
   border-radius: 0 var(--bs-border-radius-pill) var(--bs-border-radius-pill) 0;
 }
+
+.bg-light-primary {
+  background-color: $mintgreen-100;
+}
