--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -74,19 +74,14 @@ html, body, #app {
 }
 
 .btn-outline-secondary {
-  color: $gray-600;
-  border-color: $gray-600;
-
   &:not([disabled]):not(.disabled):hover,
   &:not([disabled]):not(.disabled):focus,
   &:not([disabled]):not(.disabled):active {
-    color: $white;
-    background-color: $gray-400;
-    border-color: $gray-400;
+    background-color: $indigo-400;
   }
 
   &:not([disabled]):not(.disabled):focus {
-    box-shadow: 0 0 0 .2rem rgba($gray-400, .5);
+    box-shadow: 0 0 0 .2rem rgba($indigo-400, .5);
   }
 }
 
