Create and use a drawer context menu for the transactions actions on mobile

--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -16,6 +16,7 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;6
 
 html, body, #app {
   height: 100%;
+  overflow-x: hidden;
 }
 
 // Navbar
