--- a/app/javascript/stylesheets/_variables.scss
+++ b/app/javascript/stylesheets/_variables.scss
@@ -29,7 +29,7 @@ $pink:      #e83e8c !default;
 $red:       #d9534f !default;
 $orange:    #fd7e14 !default;
 $yellow:    #f0ad4e !default;
-$green:     #22CC22 !default;
+$green:     #1eb31e !default;
 $mintgreen: #40EA80 !default;
 $cyan:      #1f9bcf !default;
 
