--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -225,10 +225,21 @@ th {
   }
 }
 
+// Bootstrap extensions
+
 @each $color, $value in $theme-colors {
   .side-strip-#{$color} {
     &::after {
       background-color: $value;
     }
+
+  }
+
+  .text-hover-#{$color}:hover {
+    color: $value !important;
+  }
+
+  .text-hover-white:hover {
+    color: $white !important;
   }
 }
