--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -243,3 +243,11 @@ th {
 .text-hover-white:hover {
   color: $white !important;
 }
+
+.text-credit {
+  color: $mintgreen-700;
+}
+
+.text-debit {
+  color: shade-color($red, 10%);
+}
