--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -3,11 +3,70 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
-      /* Email styles need to be inline */
+      html, body {
+        font-family: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        font-weight: 600;
+        color: #0d2f1a;
+      }
+
+      h1, h2, h3, h4, h5, h6{
+        text-transform: uppercase;
+        color: #1a5e33;
+      }
+
+      a {
+        color: #268c4d;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: #30B261;
+        text-decoration: underline;
+      }
+
+      a:visited {
+        color: #268c4d;
+      }
+
+      a:hover:visited {
+        color: #30B261;
+      }
+
+      .fw-light {
+        font-weight: 400;
+      }
+
+      .fw-bold {
+        font-weight: 800;
+      }
+
+      .banner {
+        display: flex;
+        align-items: center;
+      }
+
+      .ms-2 {
+        margin-left: 0.5rem;
+      }
     </style>
   </head>
 
   <body>
+    <h1 class="banner">
+      <img src="<%= vite_asset_url('images/monogram.svg') %>" alt="" aria-hidden="true" style="height: 3rem">
+      <span class="fw-bold ms-2">Finance</span>
+      <span class="fw-light ms-2">MicroManager</span>
+    </h1>
+
     <%= yield %>
+
+    <hr />
+
+  <p>
+    <%= t('rails_mailer.footer_sent_by') %>
+    <%=link_to 'Finance MicroManager', public_root_url %>
+    <br />
+    <%= t('rails_mailer.footer_version') %>: <%= Version.version %>-<%= Version.deploy_timestamp || 'dev' %>
+  </p>
   </body>
 </html>
