Display all relevant transactions in reconciliaion show page, tweaks to TransactionList to fit card body

--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -191,3 +191,16 @@ th {
 .min-width-0 {
   min-width: 0;
 }
+
+@include media-breakpoint-down(md) {
+  .row {
+    --bs-gutter-x: 1rem;
+  }
+}
+
+@include media-breakpoint-down(md) {
+  .row > * {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
