Add wallet_id to transaction filter, refactor and improve UX of transaction filter

--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -192,6 +192,16 @@ th {
   min-width: 0;
 }
 
+.width-10rem {
+  width: 10rem;
+}
+.width-15rem {
+  width: 15rem;
+}
+.width-20rem {
+  width: 20rem;
+}
+
 @include media-breakpoint-down(md) {
   .row {
     --bs-gutter-x: 1rem;
