BE implementation of bulk transaction update

--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -180,6 +180,10 @@ th {
   .text-hover-#{$color}:hover {
     color: $value !important;
   }
+
+  .bg-hover-#{$color}:hover {
+    background-color: $value !important;
+  }
 }
 
 .text-hover-white:hover {
