--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -53,7 +53,7 @@
 
   <body>
     <h1 class="banner">
-      <img src="<%= vite_asset_url('images/monogram.svg') %>" alt="" aria-hidden="true" style="height: 3rem">
+      <img src="<%= vite_asset_url('images/favicon/favicon.svg') %>" alt="" aria-hidden="true" style="height: 3rem">
       <span class="fw-bold ms-2">Finance</span>
       <span class="fw-light ms-2">MicroManager</span>
     </h1>
