--- a/app/javascript/stylesheets/_bootswatch.scss
+++ b/app/javascript/stylesheets/_bootswatch.scss
@@ -178,7 +178,7 @@ th {
   }
 
   .text-hover-#{$color}:hover {
-    color: $value !important;
+    color: darken($value, 10%) !important;
   }
 
   .bg-hover-#{$color}:hover {
