Improve vertical menu looks on desktop, make container fluid instead of fixed width

--- a/app/javascript/stylesheets/_variables.scss
+++ b/app/javascript/stylesheets/_variables.scss
@@ -157,3 +157,6 @@ $pagination-disabled-border-color:  $pagination-border-color !default;
 $offcanvas-transition-duration:     .3s !default;
 
 @import "bootstrap/scss/variables.scss";
+
+$main-navbar-height: 4rem;
+$page-footer-height: 12rem;
