Use controller strategy to serve manifest and service worker files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <link rel="mask-icon" href="<%= vite_asset_url('images/favicon/favicon.svg') %>" color="#EEEEFF">
     <meta name="theme-color" content="#40EA80">
 
-    <link rel="manifest" href="<%= vite_asset_path('manifest.webmanifest') %>" type="application/manifest+json">
+    <link rel="manifest" href="/manifest.json" type="application/manifest+json">
 
     <%= vite_client_tag %>
     <%= vite_javascript_tag 'application.js' %>
