--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -23,8 +23,8 @@
   ],
   "shortcuts": [
     {
-      "name": "<%= I18n.t('views.transactions.pwa_shortcut_label' ) %>",
-      "url": "/?new_transaction=true"
+      "name": "<%= I18n.t('views.transactions.pwa_shortcut_label') %>",
+      "url": "/?new_transaction=true2"
     }
   ],
   "start_url": "/",
