Add more screenshots, improve README

--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -42,6 +42,20 @@
       "type": "image/png",
       "form_factor": "wide",
       "label": "<%= I18n.t('views.manifest.screenshots.login_page') %>"
+    },
+    {
+      "src": "<%= vite_asset_path('images/screenshots/dashboard_landscape.png') %>",
+      "sizes": "1440x900",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "<%= I18n.t('views.manifest.screenshots.dashboard') %>"
+    },
+    {
+      "src": "<%= vite_asset_path('images/screenshots/dashboard_portrait.png') %>",
+      "sizes": "645x1398",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "<%= I18n.t('views.manifest.screenshots.dashboard') %>"
     }
   ],
   "start_url": "/",
