--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -1,6 +1,7 @@
 {
-  "short_name": "FMM",
-  "name": "<%= I18n.t('views.app_name') %>",
+  "id": "<%= Rails.env.development? ? '/?dev=1' : '/' %>",
+  "short_name": "<%= Rails.env.development? ? 'FMMDev' : 'FMM' %>",
+  "name": "<%= Rails.env.development? ? 'Finance MicroManager - Dev' : I18n.t('views.app_name') %>",
   "description": "<%= I18n.t('views.app_description') %>",
   "icons": [
     {
@@ -24,7 +25,7 @@
   "shortcuts": [
     {
       "name": "<%= I18n.t('views.transactions.pwa_shortcut_label') %>",
-      "url": "/?new_transaction=true2"
+      "url": "/?new_transaction=true"
     }
   ],
   "screenshots": [
@@ -47,5 +48,5 @@
   "background_color": "#EEEEFF",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#40EA80"
+  "theme_color": "#1A5E33"
 }
