Start of basic transaction predictions form

--- a/app/views/service_worker/service_worker.js.erb
+++ b/app/views/service_worker/service_worker.js.erb
@@ -7,7 +7,7 @@ const onActivate = (event) => {
 }
 
 const onFetch = (event) => {
-  console.log('[Serviceworker]', "Fetching!", event);
+//  console.log('[ServiceWorker]', 'Fetch URL', event.request.url);
 }
 
 self.addEventListener('install', onInstall);
