--- a/app/javascript/stylesheets/_variables.scss
+++ b/app/javascript/stylesheets/_variables.scss
@@ -160,3 +160,7 @@ $offcanvas-transition-duration:     .3s !default;
 
 $main-navbar-height: 4rem;
 $page-footer-height: 12rem;
+
+// Colors
+
+$page-header-color: $light-bg-subtle;
