Switch manual Bootstrap card with BCard for Category and Reconciliation show pages

--- a/app/javascript/stylesheets/_variables.scss
+++ b/app/javascript/stylesheets/_variables.scss
@@ -137,6 +137,10 @@ $input-bg:                              $gray-200 !default;
 $input-disabled-bg:                     $gray-300 !default;
 $input-group-addon-bg:                  $gray-300 !default;
 
+// Lists
+
+$list-group-bg: transparent;
+
 // Navbar & Navs & Tabs
 
 $navbar-padding-y:                  1.5rem !default;
