Add basic mobile tabs for navigation, update footer and copyright notice

--- a/app/javascript/stylesheets/_variables.scss
+++ b/app/javascript/stylesheets/_variables.scss
@@ -168,6 +168,7 @@ $offcanvas-transition-duration:     .3s !default;
 
 $main-navbar-height: 4rem;
 $page-footer-height: 12rem;
+$navigation-tabs-height: 5rem;
 
 
 // Custom theme variables
